Fix vm implementation of block based convert

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc2
    • Affects Version/s: 8.0.0-rc0
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • QE 2024-04-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The second argument in convert is an integer whose value encodes the target type. The current code uses arg[1].tag instead of (TypeTag) arg[1].val as conversion target.

            Assignee:
            Projjal Chanda
            Reporter:
            Projjal Chanda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: