SERVER-89070 Fix vm implementation of block based convert (#20870) (#20961)

GitOrigin-RevId: dac88ce5b42e0eb394c1d76923e84245936851c1